src/styles/shelf.module.css
.shelf {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-content: flex-start;
    width: 90%;
    flex-grow: 1;
    margin-bottom: 40px;
    background: linear-gradient(to top, #ffffff04 0px, #80696900 80px);
    border-radius: 16px;
    box-shadow: 0px 0px 20px #00000066;
}

.shelfItemWrapper {
    margin-left: 1%;
    margin-right: 1%;
    margin-top: 1%;
    margin-bottom: 1%;
    width: fit-content;
    height: fit-content;
}

.shelfItem {
    font-size: xx-large;
    font-family: var(--bellota-text-font-family);
    border-radius: 16px;
    border: 5px solid #3a3b3d;
    min-width: 300px;
    width: fit-content;
    height: 220px;
    background-size: cover;
    background-position: center;
    text-align: center;
    padding-block: 0.35em 0.625em;
    padding-inline: 0.75em;
    margin: 0;

    &:hover {
        cursor: pointer;
    }
}

.legend {
    color: #ccc9c5;
    text-shadow: 1px 1px 10px #000000;
    font-weight: bold;
    background: linear-gradient(to top, #3a3b3d00 20%, #3a3b3d99 40%, #3a3b3d99 50%, #3a3b3d00 75%);
    border-radius: 10px;
    text-align: left;
    overflow: hidden;
    white-space: nowrap;
    padding: 2px 5px;
}

.shelfSpan1 {
    font-weight: 900;
    position: relative;
    top: 35px;
    font-size: 30pt;
    text-shadow: 0px 0px 8px #ffffff;
}

.shelfSpan2 {
    font-weight: 900;
    position: relative;
    top: 35px;
    font-size: 16pt;
    text-shadow: 0px 0px 5px #000000;
}

